--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Chartbool</title>
+        <link rel="stylesheet" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js" charset="utf-8"></script>
+        <script src="https://momentjs.com/downloads/moment.js" charset="utf-8"></script>
     </head>
     <body>
         <div class="chart-container">
-            <!-- <canvas id="myChart"></canvas> -->
+            <canvas id="myChartuno" class="chart"></canvas>
+            <canvas id="myChartdue" class="chart"></canvas>
         </div>
 
         <script src="main.js" charset="utf-8"></script>
