--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
             </select>
             <select class="month-picker" name="">
                 <option value="">-- Seleziona mese --</option>
-                <option value="Gennaio">Gennaio</option>
-                <option value="Febbraio">Febbraio</option>
-                <option value="Marzo">Marzo</option>
-                <option value="Aprile">Aprile</option>
-                <option value="Maggio">Maggio</option>
-                <option value="Giugno">Giugno</option>
-                <option value="Luglio">Luglio</option>
-                <option value="Agosto">Agosto</option>
-                <option value="Settembre">Settembre</option>
-                <option value="Ottobre">Ottobre</option>
-                <option value="Novembre">Novembre</option>
-                <option value="Dicembre">Dicembre</option>
+                <option value="01">Gennaio</option>
+                <option value="02">Febbraio</option>
+                <option value="03">Marzo</option>
+                <option value="04">Aprile</option>
+                <option value="05">Maggio</option>
+                <option value="06">Giugno</option>
+                <option value="07">Luglio</option>
+                <option value="08">Agosto</option>
+                <option value="09">Settembre</option>
+                <option value="10">Ottobre</option>
+                <option value="11">Novembre</option>
+                <option value="12">Dicembre</option>
             </select>
             <input type="text" name="" value="" placeholder="Inserisci amount">
             <button type="button" name="button">Inserisci</button>
